--- a/clusters/work/infra/metallb.yaml
+++ b/clusters/work/infra/metallb.yaml
@@ -22,6 +22,13 @@ spec:
         # AddressPool ve L2Advertisement'ı Helm values ile CR olarak basıyoruz
         crds:
           enabled: true
+
+  ignoreDifferences:
+  - group: apiextensions.k8s.io
+    kind: CustomResourceDefinition
+    name: bgppeers.metallb.io
+    jsonPointers:
+    - /spec
   syncPolicy:
     automated:
       prune: true
