--- a/clusters/work/apps/demo-nginx-app.yaml
+++ b/clusters/work/apps/demo-nginx-app.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-nginx
+  name: demo-nginx-prod
   namespace: argocd
 spec:
   project: platform
   source:
     repoURL: https://github.com/EnsarTopal/platform-gitops.git
     targetRevision: HEAD
-    path: apps/demo-nginx/overlays/dev
+    path: apps/demo-nginx/overlays/prod
   destination:
     server: https://kubernetes.default.svc
     namespace: demo
@@ -17,4 +17,4 @@ spec:
       prune: true
       selfHeal: true
     syncOptions:
-    - CreateNamespace=true
+      - CreateNamespace=true
