feat: add monitoring stack

--- a/clusters/work/infra/kustomization.yaml
+++ b/clusters/work/infra/kustomization.yaml
@@ -1,4 +1,6 @@
 resources:
-  - metallb.yaml
-  - ingress-nginx.yaml
   - config
+  - ingress-nginx.yaml
+  - metallb.yaml
+  - metallb-config.yaml
+  - monitoring.yaml
