--- a/clusters/work/infra/monitoring.yaml
+++ b/clusters/work/infra/monitoring.yaml
@@ -4,6 +4,9 @@ metadata:
   name: infra-monitoring
   namespace: argocd
 spec:
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: monitoring
   project: platform
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
