--- a/clusters/work/infra/monitoring.yaml
+++ b/clusters/work/infra/monitoring.yaml
@@ -4,9 +4,6 @@ metadata:
   name: infra-monitoring
   namespace: argocd
 spec:
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: monitoring
   project: platform
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
@@ -14,7 +11,7 @@ spec:
     targetRevision: 56.6.2
     helm:
       releaseName: monitoring
-      values: |
+      values: |-
         grafana:
           adminPassword: "admin123"
           ingress:
@@ -24,6 +21,7 @@ spec:
               - grafana.lab.local
             path: /
             pathType: Prefix
+
         prometheus:
           ingress:
             enabled: true
