--- a/clusters/work/infra/loki.yaml
+++ b/clusters/work/infra/loki.yaml
@@ -15,6 +15,19 @@ spec:
         loki:
           auth_enabled: false
 
+        deploymentMode: SingleBinary
+
+        singleBinary:
+          replicas: 1
+
+        # simple scalable tarafını kapatıyoruz
+        read:
+          replicas: 0
+        write:
+          replicas: 0
+        backend:
+          replicas: 0
+
         # Single-binary (homelab için kolay)
 
         singleBinary:
