fix(loki): correct ingress values structure for chart 6.x

--- a/clusters/work/infra/loki.yaml
+++ b/clusters/work/infra/loki.yaml
@@ -44,10 +44,9 @@ spec:
           enabled: true
           ingressClassName: nginx
           hosts:
-            - host: loki.lab.local
-              paths:
-                - path: /
-                  pathType: Prefix
+            - loki.lab.local
+          paths:
+            - /
       parameters:
         - name: loki.useTestSchema
           value: "true"
