--- a/clusters/work/infra/loki.yaml
+++ b/clusters/work/infra/loki.yaml
@@ -18,6 +18,7 @@ spec:
           auth_enabled: false
           commonConfig:
             replication_factor: 1
+            path_prefix: /tmp/loki
           storage:
             type: filesystem
           useTestSchema: true
