feat(monitoring): add Loki datasource to Grafana

--- a/clusters/work/infra/monitoring.yaml
+++ b/clusters/work/infra/monitoring.yaml
@@ -21,6 +21,13 @@ spec:
               - grafana.lab.local
             path: /
             pathType: Prefix
+          additionalDataSources:
+            - name: Loki
+              type: loki
+              url: http://loki:3100
+              access: proxy
+              isDefault: false
+
         prometheus:
           ingress:
             enabled: true
