feat: convert nginx-dev to argo rollouts canary with analysis

--- a/apps/demo-nginx/base/kustomization.yaml
+++ b/apps/demo-nginx/base/kustomization.yaml
@@ -1,6 +1,8 @@
 resources:
   - namespace.yaml
-  - deployment.yaml
+  - rollout.yaml
   - service.yaml
+  - service-canary.yaml
   - ingress.yaml
   - configmap.yaml
+  - analysis-template.yaml
