fix: rollout service references for dev overlay nameSuffix

--- a/apps/demo-nginx/overlays/dev/kustomization.yaml
+++ b/apps/demo-nginx/overlays/dev/kustomization.yaml
@@ -16,4 +16,5 @@ patches:
       - op: replace
         path: /spec/replicas
         value: 2
+  - path: rollout-patch.yaml
   - path: image-patch.yaml
