--- a/apps/demo-nginx/base/analysis-template.yaml
+++ b/apps/demo-nginx/base/analysis-template.yaml
@@ -8,12 +8,14 @@ spec:
   - name: error-rate
     interval: 30s
     count: 3
-    successCondition: result[0] < 0.05
+    successCondition: result[0] <= 0.05
     failureLimit: 1
     provider:
       prometheus:
         address: http://monitoring-kube-prometheus-prometheus.monitoring.svc.cluster.local:9090
         query: |
-          sum(rate(nginx_ingress_controller_requests{status=~"5.."}[1m]))
-          /
-          sum(rate(nginx_ingress_controller_requests[1m]))
+          scalar(
+            sum(rate(nginx_ingress_controller_requests{status=~"5.."}[2m])) /
+            (sum(rate(nginx_ingress_controller_requests[2m])) > 0)
+            or vector(0)
+          )
