--- a/clusters/work/infra/kustomization.yaml
+++ b/clusters/work/infra/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
   - metallb.yaml
   - config/metallb-config.yaml
   - monitoring.yaml
+  - cert-manager.yaml
+  - config/cert-manager-issuer.yaml
