--- a/clusters/work/infra/config/cert-manager-issuer.yaml
+++ b/clusters/work/infra/config/cert-manager-issuer.yaml
@@ -2,22 +2,18 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: selfsigned-issuer
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   selfSigned: {}
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: lab-ca-issuer
-spec:
-  ca:
-    secretName: lab-ca-secret
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: lab-ca
   namespace: cert-manager
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   isCA: true
   commonName: lab.local CA
@@ -29,3 +25,13 @@ spec:
     name: selfsigned-issuer
     kind: ClusterIssuer
     group: cert-manager.io
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: lab-ca-issuer
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
+spec:
+  ca:
+    secretName: lab-ca-secret
