fix: separate cert-manager config into own app with sync wave

--- a/clusters/work/infra/kustomization.yaml
+++ b/clusters/work/infra/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - config/metallb-config.yaml
   - monitoring.yaml
   - cert-manager.yaml
-  - config/cert-manager-issuer.yaml
+  - cert-manager-config.yaml
