--- a/clusters/work/infra/loki.yaml
+++ b/clusters/work/infra/loki.yaml
@@ -13,7 +13,6 @@ spec:
       releaseName: loki
       values: |
         deploymentMode: SingleBinary
-
         loki:
           auth_enabled: false
           commonConfig:
@@ -29,7 +28,6 @@ spec:
                 index:
                   prefix: index_
                   period: 24h
-
         singleBinary:
           replicas: 1
           persistence:
@@ -40,21 +38,30 @@ spec:
           extraVolumeMounts:
             - name: loki-data
               mountPath: /var/loki
-
         read:
           replicas: 0
         write:
           replicas: 0
         backend:
           replicas: 0
-
         gateway:
           enabled: true
           service:
             type: ClusterIP
-
         ingress:
-          enabled: false
+          enabled: true
+          ingressClassName: nginx
+          annotations:
+            cert-manager.io/cluster-issuer: lab-ca-issuer
+          hosts:
+            - host: loki.lab.local
+              paths:
+                - path: /
+                  pathType: Prefix
+          tls:
+            - secretName: loki-tls
+              hosts:
+                - loki.lab.local
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
