--- a/clusters/work/infra/monitoring.yaml
+++ b/clusters/work/infra/monitoring.yaml
@@ -13,7 +13,10 @@ spec:
       releaseName: monitoring
       values: |
         grafana:
-          adminPassword: "admin123"
+          admin:
+            existingSecret: grafana-admin-credentials
+            userKey: admin-user
+            passwordKey: admin-password
           ingress:
             enabled: true
             ingressClassName: nginx
@@ -30,7 +33,7 @@ spec:
           additionalDataSources:
             - name: Loki
               type: loki
-              url: http://loki:3100
+              url: http://loki-gateway.monitoring.svc.cluster.local
               access: proxy
               isDefault: false
         prometheus:
