fix: mount telegram secret into alertmanager pod

--- a/clusters/work/infra/monitoring.yaml
+++ b/clusters/work/infra/monitoring.yaml
@@ -67,6 +67,8 @@ spec:
           alertmanagerSpec:
             useExistingSecret: true
             configSecret: alertmanager-config
+            secrets:
+              - alertmanager-telegram-credentials
         additionalPrometheusRulesMap:
           platform-rules:
             groups:
