fix: disable longhorn pre-upgrade job for fresh install

--- a/clusters/work/infra/longhorn.yaml
+++ b/clusters/work/infra/longhorn.yaml
@@ -12,6 +12,8 @@ spec:
     helm:
       releaseName: longhorn
       values: |
+        preUpgradeChecker:
+          jobEnabled: false
         defaultSettings:
           defaultReplicaCount: 2
           storageMinimalAvailablePercentage: 15
