kyverno: fix cleanupJobs kubectl image (registry.k8s.io)

--- a/clusters/work/infra/kyverno.yaml
+++ b/clusters/work/infra/kyverno.yaml
@@ -15,6 +15,10 @@ spec:
         crds:
           install: true
         cleanupJobs:
+          image:
+            registry: registry.k8s.io
+            repository: kubectl
+            tag: "v1.28.51"
           cleanupUpdateRequests:
             image:
               repository: harbor.lab.local/infra/kubectl
