--- a/clusters/work/infra/kyverno.yaml
+++ b/clusters/work/infra/kyverno.yaml
@@ -18,7 +18,7 @@ spec:
           image:
             registry: registry.k8s.io
             repository: kubectl
-            tag: "v1.28.51"
+            tag: "v1.28.5"
           cleanupUpdateRequests:
             image:
               repository: harbor.lab.local/infra/kubectl
@@ -39,6 +39,11 @@ spec:
             image:
               repository: harbor.lab.local/infra/kubectl
               tag: "1.28.5"
+        hooks:
+          image:
+            registry: registry.k8s.io
+            repository: kubectl
+            tag: "v1.28.5"
   destination:
     server: https://kubernetes.default.svc
     namespace: kyverno
