fix(kyverno): set policyReportsCleanup kubectl image

--- a/clusters/work/infra/kyverno.yaml
+++ b/clusters/work/infra/kyverno.yaml
@@ -24,6 +24,11 @@ spec:
               repository: kubectl
 
               tag: "v1.28.5"
+          policyReportsCleanup:
+            image:
+              registry: registry.k8s.io
+              repository: kubectl
+              tag: "v1.28.5"
 
           cleanupPolicyReports:
 
@@ -99,6 +104,11 @@ spec:
             registry: registry.k8s.io
             repository: kubectl
             tag: "v1.28.5"
+          policyReportsCleanup:
+            image:
+              registry: registry.k8s.io
+              repository: kubectl
+              tag: "v1.28.5"
   destination:
     server: https://kubernetes.default.svc
     namespace: kyverno
