--- a/clusters/work/infra/config/kyverno/policies.yaml
+++ b/clusters/work/infra/config/kyverno/policies.yaml
@@ -85,12 +85,15 @@ spec:
         deny:
           conditions:
             any:
-            - key: "{{ element.image }}"
-              operator: Equals
-              value: "*:latest"
-            - key: "{{ element.image }}"
-              operator: NotContains
-              value: ":"
+            # Deny if tag is "latest"
+              - key: "{{ element.image | split(@, ':') | [-1] }}"
+                operator: Equals
+                value: "latest"
+
+            # Deny if no tag specified
+              - key: "{{ contains(element.image, ':') }}"
+                operator: Equals
+                value: false
 ---
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
