fix: split multi-doc YAML with --- to avoid duplicate top-level keys

--- a/clusters/work/infra/kyverno.yaml
+++ b/clusters/work/infra/kyverno.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: argocd
 spec:
   project: platform
-
   source:
     repoURL: https://kyverno.github.io/kyverno
     chart: kyverno
@@ -16,107 +15,28 @@ spec:
         crds:
           install: true
 
-        # --- Helm hook jobs (important ones) ---
-        # pre-delete webhook cleanup hook image
-        cleanupWebhooks:
-          image:
-            registry: registry.k8s.io
-            repository: kubectl
-            tag: "v1.28.5"
-
-        # post-upgrade "clean reports" hook job image (creates Job: kyverno-clean-reports)
+        # Post-upgrade hook job "kyverno-clean-reports" image override (IMPORTANT)
         policyReportsCleanup:
           image:
             registry: registry.k8s.io
             repository: kubectl
             tag: "v1.28.5"
 
-        # (optional, but keeps consistency for the other hook defined by the chart)
-        cleanupPolicyReports:
+        # Webhook cleanup job image override (chart param name is webhooksCleanup)
+        webhooksCleanup:
           image:
             registry: registry.k8s.io
             repository: kubectl
             tag: "v1.28.5"
 
-        # --- Cleanup CronJobs images ---
-        cleanupJobs:
-          admissionReports:
-            image:
-              registry: registry.k8s.io
-              repository: kubectl
-              tag: "v1.28.5"
-          clusterAdmissionReports:
-            image:
-              registry: registry.k8s.io
-              repository: kubectl
-              tag: "v1.28.5"
-          ephemeralReports:
-            image:
-              registry: registry.k8s.io
-              repository: kubectl
-              tag: "v1.28.5"
-          clusterEphemeralReports:
-            image:
-              registry: registry.k8s.io
-              repository: kubectl
-              tag: "v1.28.5"
-          updateRequests:
-            image:
-              registry: registry.k8s.io
-              repository: kubectl
-              tag: "v1.28.5"
-
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: kyverno
-
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
-      - ServerSideApply=trueapiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: infra-kyverno
-  namespace: argocd
-spec:
-  project: platform
-
-  source:
-    repoURL: https://kyverno.github.io/kyverno
-    chart: kyverno
-    targetRevision: 3.2.6
-    helm:
-      releaseName: kyverno
-      values: |
-        crds:
-          install: true
-
-        # --- Helm hook jobs (important ones) ---
-        # pre-delete webhook cleanup hook image
-        cleanupWebhooks:
+        # Other helm hooks (migrate-resources etc.) use hooks.image
+        hooks:
           image:
             registry: registry.k8s.io
             repository: kubectl
             tag: "v1.28.5"
 
-        # post-upgrade "clean reports" hook job image (creates Job: kyverno-clean-reports)
-        policyReportsCleanup:
-          image:
-            registry: registry.k8s.io
-            repository: kubectl
-            tag: "v1.28.5"
-
-        # (optional, but keeps consistency for the other hook defined by the chart)
-        cleanupPolicyReports:
-          image:
-            registry: registry.k8s.io
-            repository: kubectl
-            tag: "v1.28.5"
-
-        # --- Cleanup CronJobs images ---
+        # Scheduled cleanup CronJobs image overrides
         cleanupJobs:
           admissionReports:
             image:
