--- a/clusters/work/infra/kyverno.yaml
+++ b/clusters/work/infra/kyverno.yaml
@@ -14,69 +14,35 @@ spec:
       values: |
         crds:
           install: true
-
-
-
-
         cleanupJobs:
           admissionReports:
             image:
               registry: registry.k8s.io
               repository: kubectl/kubectl
-              tag: "v1.28.5"
+              tag: v1.28.5
           clusterAdmissionReports:
             image:
               registry: registry.k8s.io
               repository: kubectl/kubectl
-              tag: "v1.28.5"
+              tag: v1.28.5
           ephemeralReports:
             image:
               registry: registry.k8s.io
               repository: kubectl/kubectl
-              tag: "v1.28.5"
+              tag: v1.28.5
           clusterEphemeralReports:
             image:
               registry: registry.k8s.io
               repository: kubectl/kubectl
-              tag: "v1.28.5"
+              tag: v1.28.5
           updateRequests:
             image:
               registry: registry.k8s.io
               repository: kubectl/kubectl
-              tag: "v1.28.5"
-
-        kubectlImage:
-          registry: registry.k8s.io
-          repository: kubectl/kubectl
-          tag: "v1.28.5"
-
-        # Post-upgrade hook job "kyverno-clean-reports" image override (IMPORTANT)
-        policyReportsCleanup:
-          image:
-            registry: registry.k8s.io
-            repository: kubectl/kubectl
-            tag: "v1.28.5"
-
-        # Webhook cleanup job image override (chart param name is webhooksCleanup)
-        webhooksCleanup:
-          image:
-            registry: registry.k8s.io
-            repository: kubectl/kubectl
-            tag: "v1.28.5"
-
-        # Other helm hooks (migrate-resources etc.) use hooks.image
-        hooks:
-          image:
-            registry: registry.k8s.io
-            repository: kubectl/kubectl
-            tag: "v1.28.5"
-
-        # Scheduled cleanup CronJobs image overrides
-
+              tag: v1.28.5
   destination:
     server: https://kubernetes.default.svc
     namespace: kyverno
-
   syncPolicy:
     automated:
       prune: true
